# backend-design-patterns

./: README.md  main.py  pyproject.toml  run_benchmark.py
app/api/: polling.py  req_resp.py  sse.py  sse_2.py  websocket.py
app/services/: simulated_work.py
frontend/: package-lock.json
frontend/src/: App.jsx  index.css
frontend/src/components/: ControlPanel.jsx  JobCard.jsx  StatsPanel.jsx
frontend/src/hooks/: useSimulation.js
load_tests/: locustfile.py
