[project]
name = "backend-design-patterns"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "fastapi>=0.126.0",
    "uvicorn>=0.39.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "locust>=2.42.6",
    "websocket-client>=1.9.0",
]
